# cowor

./: Cargo.toml  README.md
src/: cielab.rs  cielch.rs  ciexyz.rs  error.rs  lib.rs  srgb.rs
src/cielab/: conversions.rs  tests.rs
src/cielch/: conversions.rs  tests.rs
src/ciexyz/: conversions.rs  tests.rs
src/srgb/: conversions.rs  tests.rs
